--- a/src/app/components/insert-panels/insert-panels.component.html
+++ b/src/app/components/insert-panels/insert-panels.component.html
@@ -1,5 +1,7 @@
 <div style="margin:20px;margin-bottom:0;font-weight: 600;">
-  <span style="font-size:18px">{{ 'insertPanel.flowunitList' | translate}}</span>
+  <span style="font-size:18px">
+    {{ 'insertPanel.flowunitList' | translate}}
+  </span>
   <i class="icon icon-refresh"
     style="margin-left: 20px;margin-bottom: 5px;cursor:pointer"
     (click)="refreshFlowunit()">
