--- a/src/app/components/tool-bar-solution/tool-bar-solution.component.html
+++ b/src/app/components/tool-bar-solution/tool-bar-solution.component.html
@@ -1,65 +1,123 @@
 <div id="tool-bar" class="tool-bar">
   <div class="tool-bar-left btn-group">
     <span id="undoredo">
-      <d-button id="undo1" *ngIf="hasUndo" dTooltip bsStyle="text-dark" [content]="'toolBar.backButton' | translate"
-        [disabled]="!hasUndo" (click)="handleUndoButtonClick($event)">
+     <d-button
+       id="undo1"
+       *ngIf="hasUndo"
+       dTooltip
+       bsStyle="text-dark"
+       [content]="'toolBar.backButton' | translate"
+       [disabled]="!hasUndo"
+       (click)="handleUndoButtonClick($event)">
         <img src={{backSvg}} />
       </d-button>
-      <d-button id="undo2" *ngIf="!hasUndo" dTooltip bsStyle="text-dark" [content]="'toolBar.backButton' | translate"
-        [disabled]="!hasUndo" (click)="handleUndoButtonClick($event)">
+      <d-button
+        id="undo2"
+        *ngIf="!hasUndo"
+        dTooltip
+        bsStyle="text-dark"
+        [content]="'toolBar.backButton' | translate"
+        [disabled]="!hasUndo"
+        (click)="handleUndoButtonClick($event)">
         <img src={{backDisabledSvg}} />
       </d-button>
-      <d-button id="redo1" *ngIf="hasRedo" dTooltip bsStyle="text-dark" [content]="'toolBar.redoButton' | translate"
-        [disabled]="!hasRedo" (click)="handleRedoButtonClick($event)">
+      <d-button
+        id="redo1"
+        *ngIf="hasRedo"
+        dTooltip
+        bsStyle="text-dark"
+        [content]="'toolBar.redoButton' | translate"
+        [disabled]="!hasRedo"
+        (click)="handleRedoButtonClick($event)">
         <img src={{redoSvg}} />
       </d-button>
-      <d-button id="redo2" *ngIf="!hasRedo" dTooltip bsStyle="text-dark" [content]="'toolBar.redoButton' | translate"
-        [disabled]="!hasRedo" (click)="handleRedoButtonClick($event)">
+      <d-button
+        id="redo2"
+        *ngIf="!hasRedo"
+        dTooltip
+        bsStyle="text-dark"
+        [content]="'toolBar.redoButton' | translate"
+        [disabled]="!hasRedo"
+        (click)="handleRedoButtonClick($event)">
         <img src={{redoDisabledSvg}} />
       </d-button>
     </span>
     <span id="zoominout">
-      <d-button id="zoom-in" dTooltip bsStyle="text-dark" [content]="'toolBar.zoomInButton' | translate"
+      <d-button
+        id="zoom-in"
+        dTooltip
+        bsStyle="text-dark"
+        [content]="'toolBar.zoomInButton' | translate"
         (click)="handleZoomInButtonClick($event)">
         <img src={{zoomInSvg}} />
       </d-button>
-      <d-button id="zoom-out" dTooltip bsStyle="text-dark" [content]="'toolBar.zoomOutButton' | translate"
+      <d-button
+        id="zoom-out"
+        dTooltip
+        bsStyle="text-dark"
+        [content]="'toolBar.zoomOutButton' | translate"
         (click)="handleZoomOutButtonClick($event)">
         <img src={{zoomOutSvg}} />
       </d-button>
     </span>
-    <d-button id="zoom-reset" dTooltip bsStyle="text-dark" [content]="'toolBar.zoomResetButton' | translate"
+    <d-button
+      id="zoom-reset"
+      dTooltip
+      bsStyle="text-dark"
+      [content]="'toolBar.zoomResetButton' | translate"
       (click)="handleZoomResetButtonClick($event)">
       <img src={{zoomResetSvg}} />
     </d-button>
-    <d-button id="zoom-fit" dTooltip bsStyle="text-dark" [content]="'toolBar.zoomFitButton' | translate"
+    <d-button
+      id="zoom-fit"
+      dTooltip
+      bsStyle="text-dark"
+      [content]="'toolBar.zoomFitButton' | translate"
       (click)="handleZoomFitButtonClick($event)">
       <img src={{zoomFitSvg}} />
     </d-button>
-    <d-button id="switch" dTooltip bsStyle="text-dark" [content]="'toolBar.switchButton' | translate"
+    <d-button
+      id="switch"
+      dTooltip
+      bsStyle="text-dark"
+      [content]="'toolBar.switchButton' | translate"
       (click)="handleSwitchDirectionButtonClick($event)">
       <img src={{switchSvg}} />
     </d-button>
-    <d-button id="run" dTooltip bsStyle="text-dark" [content]="'toolBar.runGraphButton' | translate"
+    <d-button
+      id="run"
+      dTooltip
+      bsStyle="text-dark"
+      [content]="'toolBar.runGraphButton' | translate"
       (click)="handleRunButtonClick($event)">
       <img src={{runGraphSvg}} />
     </d-button>
   </div>
   <div class="tool-bar-right" style="margin: 0 20px 0 20px;">
     <div style="display: inline-block;">
-      <button id="selectDemo" (click)="showSelectDemoDialog(selectDemo)" class="tool-bar-button"
+      <button
+        id="selectDemo"
+        (click)="showSelectDemoDialog(selectDemo)"
+        class="tool-bar-button"
         style="display: inline-block;">
         {{'toolBar.selectDemo' | translate}}
       </button>
     </div>
-    <button id="tutorial" (click)="openTutorial($event)" class="tool-bar-button" style="display: inline-block;">
+    <button
+      id="tutorial"
+      (click)="openTutorial($event)"
+      class="tool-bar-button"
+      style="display: inline-block;">
       {{'toolBar.openTutorial' | translate}}
     </button>
   </div>
 </div>
 
 <ng-template #selectDemo id="selectDemo">
-  <d-card class="card-container" *ngFor="let d of solutionList" style="width:50%;height:100%"
+  <d-card
+    class="card-container"
+    *ngFor="let d of solutionList"
+    style="width:50%;height:100%"
     (click)="onClickCard(d)">
     <d-card-header>
       <d-avatar dCardAvatar [name]="d.name"></d-avatar>
