--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -84,7 +84,7 @@
                 [registerZoomResetButtonClick]="registerZoomResetButtonClick"
                 [registerNodeAttributeChange]="registerNodeAttributeChange"
                 [isResizing]="isResizing"
-                (sendIsOpen)="updateIsOpen">
+                (sendIsOpen)="updateIsOpen($event)">
               </app-graph>
             </div>
           </as-split-area>
