--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -55,12 +55,16 @@
     background   : #FFFFFF;
     box-shadow   : 0 1px 0 0 #DFE1E6, 0 4px 8px 0 rgba(0, 0, 0, 0.10);
     border-radius: 0 2px 0 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     .tool-bar-left {
-        float      : left;
-        width      : 30%;
-        padding    : 8px 8px 8px 24px;
+        display:inline-block;
+        width      : 40%;
         user-select: none;
+        margin-left: 24px;
+        left: 0;
 
         & d-button {
             margin          : 0 4px 0 4px;
@@ -77,10 +81,12 @@
     }
 
     .tool-bar-right {
-        float     : right;
-        padding   : 8px;
+        display:inline-block;
         width     : 40%;
         text-align: right;
+        right:0;
+        top:0;
+        margin-right: 24px;
 
         & d-button {
             margin        : 0 4px 0 4px;
@@ -97,8 +103,8 @@
     }
 
     .tool-bar-mid {
-        float      : right;
-        margin-right: 50px;
+        display:inline-block;
+        text-align: center;
     }
 
     .align-origin {
