UI: add box shadow of flowunitlist

--- a/src/app/components/insert-panels/insert-panels.component.html
+++ b/src/app/components/insert-panels/insert-panels.component.html
@@ -1,4 +1,4 @@
-<div style="margin:20px;margin-bottom:0;font-weight: 600;">
+<div style="padding-top:8px;padding-bottom:8px; margin-bottom:10px; font-weight: 600; text-align: center; box-shadow: 0px 4px 8px#dfe1e6">
   <span style="font-size:18px">
     {{ 'insertPanel.flowunitList' | translate}}
   </span>
