--- a/src/app/components/insert-panels/insert-panels.component.less
+++ b/src/app/components/insert-panels/insert-panels.component.less
@@ -2,7 +2,7 @@
     color: #282B33;
 
     .menu-block {
-        white-space: nowrap
+        white-space: nowrap;
     }
 
     .devui-accordion-item-title {
@@ -57,19 +57,6 @@
     width     : 240px;
     color     : white;
     height    : auto;
-
-    &::before {
-        width        : 0;
-        height       : 0;
-        position     : absolute;
-        content      : "";
-        left         : 0px;
-        top          : 50% - 10px;
-        border-top   : 10px solid transparent;
-        border-right : 10px solid #333854;
-        border-bottom: 10px solid transparent;
-        border-left  : 10px solid transparent;
-    }
 }
 
 .tips-block-top {
