--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -49,6 +49,7 @@
         </as-split-area>
         <as-split-area [size]="20">
           <app-text-editor
+          id="text"
             [dotSrc]="dotSrc"
             [onTextChange]="handleTextChange"
             [onFocus]="handleTextEditorFocus"
