--- a/src/app/components/tool-bar/tool-bar.component.less
+++ b/src/app/components/tool-bar/tool-bar.component.less
@@ -10,6 +10,10 @@
     border-radius   : 2px;
 }
 
+.card-focus{
+    border          : 5px solid #5e7ce0 !important;
+}
+
 .basic-usage {
     td{
         cursor: pointer;
