UI:fix pth error

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -565,13 +565,13 @@
                         <d-form-item>
                             <d-form-label>{{'toolBar.reLeaseFlowunitPath' | translate}}</d-form-label>
                             <d-form-control>
-                                <textarea dTextarea name="dir2" [(ngModel)]="flowunitReleasePath"></textarea>
+                                <textarea dTextarea name="dir2" [(ngModel)]="formData.flowunitReleasePath"></textarea>
                             </d-form-control>
                         </d-form-item>
                         <d-form-item>
                             <d-form-label>{{'toolBar.debugFlowunitPath' | translate}}</d-form-label>
                             <d-form-control>
-                                <textarea dTextarea name="dir" [(ngModel)]="formData.flowunitPath"></textarea>
+                                <textarea dTextarea name="dir" [(ngModel)]="formData.flowunitDebugPath"></textarea>
                             </d-form-control>
                         </d-form-item>
                     </form>
